# flyghts

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: update_flights.yml
data/: 2025-11-26.csv  2025-12-01.csv  2025-12-02.csv  2025-12-03.csv  2025-12-05.csv  2025-12-06.csv  2025-12-07.csv  2025-12-10.csv  2025-12-14.csv  2025-12-15.csv  2025-12-16.csv  2025-12-18.csv  2025-12-19.csv  2025-12-20.csv  2025-12-21.csv  2025-12-22.csv  2025-12-24.csv  2025-12-25.csv  2025-12-26.csv  2025-12-27.csv  2025-12-28.csv  2025-12-30.csv  2025-12-31.csv  2026-01-05.csv  2026-01-07.csv  2026-01-09.csv  2026-01-11.csv  2026-01-13.csv  2026-01-16.csv  2026-01-18.csv  2026-01-23.csv  2026-01-24.csv  2026-01-25.csv  2026-01-26.csv  2026-01-27.csv  2026-01-29.csv  2026-01-30.csv  2026-01-31.csv  2026-02-03.csv  2026-02-05.csv  (+13 more)
data/hkg/: 2025-11-23.csv  2025-11-24.csv  2025-11-25.csv  2025-11-27.csv  2025-11-28.csv  2025-11-29.csv  2025-11-30.csv  2025-12-04.csv  2025-12-08.csv  2025-12-09.csv  2025-12-11.csv  2025-12-12.csv  2025-12-13.csv  2025-12-17.csv  2025-12-23.csv  2025-12-29.csv  2026-01-01.csv  2026-01-02.csv  2026-01-03.csv  2026-01-04.csv  2026-01-06.csv  2026-01-08.csv  2026-01-10.csv  2026-01-12.csv  2026-01-14.csv  2026-01-15.csv  2026-01-17.csv  2026-01-19.csv  2026-01-20.csv  2026-01-21.csv  2026-01-22.csv  2026-01-28.csv  2026-02-01.csv  2026-02-02.csv  2026-02-04.csv  2026-02-06.csv  2026-02-07.csv  (+68 more)
marimo/: flight_audit.py
scripts/: dump_hk_flights.py  dump_korea_flights.py  dump_us_flights.py  fetch_reference_data.py  validate_reference_data.py
streamlit/: flight_dashboard.py
tests/: __init__.py  conftest.py  test_hk_airport.py  test_models.py  test_reference.py  test_service.py
(+17 files in other folders)
