[project]
name = "flyghts"
version = "0.1.0"
description = "Python data analysis project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "requests>=2.28.0",
    "jupyterlab>=3.3.0",
    "ipykernel>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "statsmodels>=0.13.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=2.20.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
